# diff-match-patch

./: .gitignore  CMakeLists.txt
c/: CMakeLists.txt  diff-match-patch.c
c/include/: diff-match-patch.h
c/tests/: CMakeLists.txt  helpers.c  helpers.h  messages.c  null_operations.c  smoke_test.c  test_diffs.c
